--- a/app/src/main/res/layout/star.xml
+++ b/app/src/main/res/layout/star.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
            android:src="@drawable/ic_star_empty"
-           android:layout_width="32dp"
-           android:layout_height="32dp"/>
+           android:padding="2dp"
+           android:layout_width="24dp"
+           android:layout_height="24dp"/>
