--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -14,15 +14,34 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </RelativeLayout>
-    <LinearLayout
-        android:padding="20dp"
-        android:id="@+id/rating"
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <include layout="@layout/star" />
-        <include layout="@layout/star" />
-        <include layout="@layout/star" />
-        <include layout="@layout/star" />
-        <include layout="@layout/star" />
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        >
+        <View
+            android:background="@drawable/post_shadow"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <LinearLayout
+            android:background="@drawable/post_bottom_border"
+            android:padding="20dp"
+            android:layout_marginBottom="2dp"
+            android:id="@+id/rating"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <include layout="@layout/star"/>
+
+            <include layout="@layout/star"/>
+
+            <include layout="@layout/star"/>
+
+            <include layout="@layout/star"/>
+
+            <include layout="@layout/star"/>
+        </LinearLayout>
+    </FrameLayout>
+
 </LinearLayout>
