--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="postDarkTint">#64000000</color>
+    <color name="postBottomBorder">#dedede</color>
+    <color name="postShadow">#eeeeee</color>
 </resources>
