--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -15,16 +15,42 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
-        <TextView
-            android:id="@+id/title"
-            android:textStyle="bold"
-            android:textSize="22sp"
-            android:textColor="#fff"
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:paddingTop="10dp"
             android:paddingLeft="25dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            >
+
+            <TextView
+                android:id="@+id/title"
+                android:textStyle="bold"
+                android:textSize="22sp"
+                android:textColor="#fff"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <LinearLayout
+                android:id="@+id/contacts"
+                android:paddingTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                >
+
+                <TextView
+                    android:id="@+id/phone"
+                    android:textSize="15sp"
+                    android:textColor="#fff"
+                    android:drawableLeft="@drawable/ic_phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+
+        </LinearLayout>
+
     </RelativeLayout>
 
     <FrameLayout
