--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -34,16 +34,26 @@
 
             <LinearLayout
                 android:id="@+id/contacts"
+                android:orientation="vertical"
                 android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 >
+
+                <TextView
+                    android:id="@+id/address"
+                    android:textSize="15sp"
+                    android:textColor="#fff"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
 
                 <TextView
                     android:id="@+id/phone"
                     android:textSize="15sp"
                     android:textColor="#fff"
                     android:drawableLeft="@drawable/ic_phone"
+                    android:drawablePadding="4dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
