--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -6,8 +6,9 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
     <RelativeLayout
+        android:paddingTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="120dp">
+        android:layout_height="140dp">
 
         <ImageView
             android:id="@+id/image"
@@ -15,51 +16,58 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
+        <FrameLayout
             android:paddingTop="10dp"
-            android:paddingLeft="25dp"
+            android:paddingBottom="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             >
 
-            <TextView
-                android:id="@+id/title"
-                android:textStyle="bold"
-                android:textSize="22sp"
-                android:textColor="#fff"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
             <LinearLayout
-                android:id="@+id/contacts"
                 android:orientation="vertical"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingTop="10dp"
+                android:paddingLeft="25dp"
                 >
 
                 <TextView
-                    android:id="@+id/address"
-                    android:textSize="15sp"
+                    android:id="@+id/title"
+                    android:textStyle="bold"
+                    android:textSize="22sp"
                     android:textColor="#fff"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
-                <TextView
-                    android:id="@+id/phone"
-                    android:textSize="15sp"
-                    android:textColor="#fff"
-                    android:drawableLeft="@drawable/ic_phone"
-                    android:drawablePadding="4dp"
+                <LinearLayout
+                    android:id="@+id/contacts"
+                    android:orientation="vertical"
+                    android:paddingTop="10dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    >
+
+                    <TextView
+                        android:id="@+id/address"
+                        android:textSize="15sp"
+                        android:textColor="#fff"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:id="@+id/phone"
+                        android:textSize="15sp"
+                        android:textColor="#fff"
+                        android:drawableLeft="@drawable/ic_phone"
+                        android:drawablePadding="4dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
             </LinearLayout>
+        </FrameLayout>
 
-
-        </LinearLayout>
 
     </RelativeLayout>
 
