--- a/app/src/main/res/drawable/post_image_placeholder.xml
+++ b/app/src/main/res/drawable/post_image_placeholder.xml
@@ -3,7 +3,8 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/postPlaceHolder" />
-            <corners android:radius="5dp" />
+            <corners android:topLeftRadius="5dp" android:topRightRadius="5dp"
+                     android:bottomLeftRadius="0.1dp" android:bottomRightRadius="0.1dp"/>
         </shape>
     </item>
 </layer-list>
