--- a/app/src/main/res/layout/home_header.xml
+++ b/app/src/main/res/layout/home_header.xml
@@ -18,30 +18,54 @@
 
         <LinearLayout
             android:orientation="vertical"
-            android:layout_gravity="center"
+            android:layout_gravity="center_horizontal"
             android:gravity="center"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:paddingBottom="30dp"
-            android:paddingTop="40dp"
+            android:paddingBottom="25dp"
+            android:paddingTop="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
                 android:textStyle="bold"
-                android:textSize="22sp"
+                android:textSize="24sp"
                 android:textColor="#fff"
+                android:paddingBottom="5dp"
                 android:text="@string/welcome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
             <TextView
-                android:textSize="14sp"
+                android:textSize="15sp"
                 android:textColor="#fff"
                 android:gravity="center"
                 android:text="@string/welcome_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
+
+            <EditText
+                android:id="@+id/search_edit"
+                android:hint="@string/search_edit_home_hint"
+                android:layout_marginTop="25dp"
+                android:paddingTop="7dp"
+                android:paddingBottom="7dp"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:singleLine="true"
+                android:textSize="16sp"
+                android:background="@drawable/edit_text_background"
+                android:layout_width="match_parent"
+                android:layout_height="44dp"/>
+
+            <Button
+                android:text="@string/search"
+                android:layout_marginTop="10dp"
+                android:id="@+id/search_button"
+                style="@style/contrastButton"
+                android:textSize="15sp"
+                android:layout_width="match_parent"
+                android:layout_height="46dp"/>
         </LinearLayout>
     </FrameLayout>
 
