basic header gome search

--- a/app/src/main/res/layout/menu_header.xml
+++ b/app/src/main/res/layout/menu_header.xml
@@ -3,10 +3,10 @@
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
     <FrameLayout android:layout_width="match_parent"
-                 android:layout_marginTop="20dp"
+                 android:paddingTop="30dp"
                  android:paddingLeft="10dp"
                  android:background="@color/colorPrimary"
-                 android:layout_height="100dp">
+                 android:layout_height="110dp">
         <ImageView
             android:id="@+id/logo"
             android:layout_gravity="center_vertical"
