--- a/app/src/main/res/layout/empty_view.xml
+++ b/app/src/main/res/layout/empty_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/empty"
+             android:visibility="gone"
              android:padding="40dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
