--- a/app/src/main/res/drawable/post_bottom_border.xml
+++ b/app/src/main/res/drawable/post_bottom_border.xml
@@ -6,5 +6,5 @@
         android:bottomLeftRadius="5dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/postBottomBorder" />
+        android:color="@color/border" />
 </shape>
