--- a/app/src/main/res/layout/post_page.xml
+++ b/app/src/main/res/layout/post_page.xml
@@ -1,83 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="280dp"
-        >
-
-        <ImageView
-            android:id="@+id/image"
-            android:src="@drawable/header_placeholder"
-            android:adjustViewBounds="true"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+    >
 
+    <LinearLayout android:orientation="vertical"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:paddingTop="20dp"
-            android:paddingLeft="25dp"
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="280dp"
             >
 
-            <TextView
-                android:id="@+id/title"
-                android:textStyle="bold"
-                android:textSize="24sp"
-                android:textColor="#fff"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+            <ImageView
+                android:id="@+id/image"
+                android:src="@drawable/header_placeholder"
+                android:adjustViewBounds="true"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
 
             <LinearLayout
-                android:id="@+id/contacts"
                 android:orientation="vertical"
-                android:paddingTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingTop="20dp"
+                android:paddingLeft="25dp"
                 >
 
                 <TextView
-                    android:id="@+id/address"
-                    android:textSize="15sp"
+                    android:id="@+id/title"
+                    android:textStyle="bold"
+                    android:textSize="24sp"
                     android:textColor="#fff"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
-                <TextView
-                    android:id="@+id/phone"
-                    android:textSize="15sp"
-                    android:textColor="#fff"
-                    android:drawableLeft="@drawable/ic_phone"
-                    android:drawablePadding="4dp"
+                <LinearLayout
+                    android:id="@+id/contacts"
+                    android:orientation="vertical"
+                    android:paddingTop="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    >
+
+                    <TextView
+                        android:id="@+id/address"
+                        android:textSize="15sp"
+                        android:textColor="#fff"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:id="@+id/phone"
+                        android:textSize="15sp"
+                        android:textColor="#fff"
+                        android:drawableLeft="@drawable/ic_phone"
+                        android:drawablePadding="4dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:paddingTop="20dp"
+                    android:id="@+id/rating"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <include layout="@layout/post_page_star"/>
+
+                    <include layout="@layout/post_page_star"/>
+
+                    <include layout="@layout/post_page_star"/>
+
+                    <include layout="@layout/post_page_star"/>
+
+                    <include layout="@layout/post_page_star"/>
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/write_a_review_button"
+                    android:layout_marginTop="20dp"
+                    style="@style/contrastButton"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="@string/write_a_review"
+                    android:textAllCaps="false"
+                    android:background="@drawable/write_review_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
+
             </LinearLayout>
 
-            <LinearLayout
-                android:paddingTop="20dp"
-                android:id="@+id/rating"
+        </FrameLayout>
+
+        <LinearLayout
+            android:padding="20dp"
+            android:paddingTop="15dp"
+            android:layout_margin="15dp"
+
+            android:background="@drawable/rounded_border"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textSize="17sp"
+                android:paddingBottom="10dp"
+                android:textColor="@color/greyHeaderText"
+                android:text="@string/photo_gallery"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <GridView
+                android:id="@+id/photo_gallery_list"
+                android:numColumns="4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <include layout="@layout/post_page_star"/>
-
-                <include layout="@layout/post_page_star"/>
-
-                <include layout="@layout/post_page_star"/>
-
-                <include layout="@layout/post_page_star"/>
-
-                <include layout="@layout/post_page_star"/>
-            </LinearLayout>
-
+            </GridView>
         </LinearLayout>
-
-    </FrameLayout>
-
-</FrameLayout>
+    </LinearLayout>
+</ScrollView>
