--- a/app/src/main/res/layout/post_page.xml
+++ b/app/src/main/res/layout/post_page.xml
@@ -96,11 +96,23 @@
 
         </FrameLayout>
 
+        <FrameLayout
+            android:padding="20dp"
+            android:layout_margin="15dp"
+            android:background="@drawable/rounded_border"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/description"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </FrameLayout>
+
         <LinearLayout
             android:padding="20dp"
             android:paddingTop="15dp"
             android:layout_margin="15dp"
-
             android:background="@drawable/rounded_border"
             android:orientation="vertical"
             android:layout_width="match_parent"
