--- a/app/src/main/res/layout/home_header.xml
+++ b/app/src/main/res/layout/home_header.xml
@@ -48,15 +48,7 @@
                 android:id="@+id/search_edit"
                 android:hint="@string/search_edit_home_hint"
                 android:layout_marginTop="25dp"
-                android:paddingTop="7dp"
-                android:paddingBottom="7dp"
-                android:paddingLeft="12dp"
-                android:paddingRight="12dp"
-                android:singleLine="true"
-                android:textSize="16sp"
-                android:background="@drawable/edit_text_background"
-                android:layout_width="match_parent"
-                android:layout_height="44dp"/>
+                style="@style/whiteEditText"/>
 
             <Button
                 android:id="@+id/search_button"
