--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,7 +20,20 @@
     </style>
 
     <style name="contrastButton">
+        <item name="android:layout_height">30dp</item>
         <item name="android:textColor">#fff</item>
         <item name="android:background">@drawable/contrast_button</item>
+    </style>
+    
+    <style name="whiteEditText">
+        <item name="android:paddingTop">7dp</item>
+        <item name="android:paddingBottom">7dp</item>
+        <item name="android:paddingLeft">12dp</item>
+        <item name="android:paddingRight">12dp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:background">@drawable/edit_text_background</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">44dp</item>
     </style>
 </resources>
