--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="postShadow">#eeeeee</color>
     <color name="imagePlaceHolder">#434343</color>
     <color name="greyHeaderText">#454545</color>
+    <color name="greyText">#686868</color>
 </resources>
