--- a/app/src/main/res/layout/home_sub_header.xml
+++ b/app/src/main/res/layout/home_sub_header.xml
@@ -18,7 +18,7 @@
 
     <TextView
         android:gravity="center"
-        android:textColor="#686868"
+        android:textColor="@color/greyText"
         android:textSize="15sp"
         android:text="@string/home_sub_header_message"
         android:layout_width="wrap_content"
