--- a/app/src/main/res/layout/write_review_activity.xml
+++ b/app/src/main/res/layout/write_review_activity.xml
@@ -86,6 +86,7 @@
 
         <EditText
             android:singleLine="false"
+            android:gravity="top|left"
             android:lines="8"
             android:layout_height="wrap_content"
             android:id="@+id/comment"
