--- a/app/src/main/res/layout/write_review_activity.xml
+++ b/app/src/main/res/layout/write_review_activity.xml
@@ -19,6 +19,7 @@
             android:layout_height="wrap_content"/>
 
         <TableLayout
+            android:id="@+id/rating_layout"
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
