--- a/app/src/main/res/layout/post_page.xml
+++ b/app/src/main/res/layout/post_page.xml
@@ -130,6 +130,15 @@
                 android:layout_height="wrap_content"/>
         </FrameLayout>
 
+        <com.utilsframework.android.view.flowlayout.FlowLayout
+            android:id="@+id/tags"
+            android:padding="20dp"
+            android:layout_margin="15dp"
+            android:background="@drawable/rounded_border"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </com.utilsframework.android.view.flowlayout.FlowLayout>
+
         <LinearLayout
             android:padding="20dp"
             android:paddingTop="15dp"
