AddPostActivity operating hours integrated

--- a/app/src/main/res/layout/add_post_activity_content.xml
+++ b/app/src/main/res/layout/add_post_activity_content.xml
@@ -69,5 +69,193 @@
             android:text="@string/add_tags_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+
+        <LinearLayout
+            android:layout_marginTop="20dp"
+            android:padding="10dp"
+            android:background="@drawable/rounded_border"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/operation_hours_toggle"
+                android:textColor="@color/darkGreyText"
+                android:text="@string/hours_of_operation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TableLayout
+                android:stretchColumns="*"
+                android:visibility="gone"
+                android:id="@+id/operation_hours"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TableRow>
+                    <View />
+                    <TextView
+                        android:padding="@dimen/add_post_operating_hours"
+                        android:textStyle="bold"
+                        android:textColor="@color/darkGreyText"
+                        android:text="@string/open"
+                        />
+                    <TextView
+                        android:padding="@dimen/add_post_operating_hours"
+                        android:textStyle="bold"
+                        android:textColor="@color/darkGreyText"
+                        android:text="@string/close"
+                        />
+                </TableRow>
+                <TableRow
+                    >
+                    <TextView
+                        android:padding="@dimen/add_post_operating_hours"
+                        android:textColor="@color/darkGreyText"
+                        android:text="@string/saturday"
+                        />
+                    <Spinner
+                        android:layout_margin="@dimen/add_post_operating_hours"
+                        android:background="@drawable/rounded_border"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <Spinner
+                        android:layout_margin="@dimen/add_post_operating_hours"
+                        android:background="@drawable/rounded_border"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </TableRow>
+                <TableRow
+                    >
+                    <TextView
+                        android:padding="@dimen/add_post_operating_hours"
+                        android:textColor="@color/darkGreyText"
+                        android:text="@string/sunday"
+                        />
+                    <Spinner
+                        android:layout_margin="@dimen/add_post_operating_hours"
+                        android:background="@drawable/rounded_border"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <Spinner
+                        android:layout_margin="@dimen/add_post_operating_hours"
+                        android:background="@drawable/rounded_border"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </TableRow>
+                <TableRow
+                    >
+                    <TextView
+                        android:padding="@dimen/add_post_operating_hours"
+                        android:textColor="@color/darkGreyText"
+                        android:text="@string/monday"
+                        />
+                    <Spinner
+                        android:layout_margin="@dimen/add_post_operating_hours"
+                        android:background="@drawable/rounded_border"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <Spinner
+                        android:layout_margin="@dimen/add_post_operating_hours"
+                        android:background="@drawable/rounded_border"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </TableRow>
+                <TableRow
+                    >
+                    <TextView
+                        android:padding="@dimen/add_post_operating_hours"
+                        android:textColor="@color/darkGreyText"
+                        android:text="@string/tuesday"
+                        />
+                    <Spinner
+                        android:layout_margin="@dimen/add_post_operating_hours"
+                        android:background="@drawable/rounded_border"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <Spinner
+                        android:layout_margin="@dimen/add_post_operating_hours"
+                        android:background="@drawable/rounded_border"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </TableRow>
+                <TableRow
+                    >
+                    <TextView
+                        android:padding="@dimen/add_post_operating_hours"
+                        android:textColor="@color/darkGreyText"
+                        android:text="@string/wednesday"
+                        />
+                    <Spinner
+                        android:layout_margin="@dimen/add_post_operating_hours"
+                        android:background="@drawable/rounded_border"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <Spinner
+                        android:layout_margin="@dimen/add_post_operating_hours"
+                        android:background="@drawable/rounded_border"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </TableRow>
+                <TableRow
+                    >
+                    <TextView
+                        android:padding="@dimen/add_post_operating_hours"
+                        android:textColor="@color/darkGreyText"
+                        android:text="@string/thursday"
+                        />
+                    <Spinner
+                        android:layout_margin="@dimen/add_post_operating_hours"
+                        android:background="@drawable/rounded_border"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <Spinner
+                        android:layout_margin="@dimen/add_post_operating_hours"
+                        android:background="@drawable/rounded_border"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </TableRow>
+                <TableRow
+                    >
+                    <TextView
+                        android:padding="@dimen/add_post_operating_hours"
+                        android:textColor="@color/darkGreyText"
+                        android:text="@string/friday"
+                        />
+                    <Spinner
+                        android:layout_margin="@dimen/add_post_operating_hours"
+                        android:background="@drawable/rounded_border"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <Spinner
+                        android:layout_margin="@dimen/add_post_operating_hours"
+                        android:background="@drawable/rounded_border"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </TableRow>
+            </TableLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rounded_border"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/select_cover_image"
+                android:text="@string/cover_image"
+                android:padding="10dp"
+                android:textColor="@color/darkGreyText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <ImageView
+                android:id="@+id/cover_image"
+                android:visibility="gone"
+                android:scaleType="centerCrop"
+                android:adjustViewBounds="true"
+                android:layout_width="100dp"
+                android:layout_height="60dp"/>
+
+        </LinearLayout>
     </LinearLayout>
 </ScrollView>
