--- a/app/src/main/res/layout/home_sub_header.xml
+++ b/app/src/main/res/layout/home_sub_header.xml
@@ -10,7 +10,7 @@
               android:layout_height="match_parent">
     <TextView
         android:gravity="center"
-        android:textColor="@color/greyHeaderText"
+        android:textColor="@color/darkGreyText"
         android:textSize="20sp"
         android:text="@string/home_sub_header_title"
         android:layout_width="wrap_content"
