--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -21,7 +21,7 @@
                   android:layout_height="wrap_content">
 
         <TextView
-            android:textColor="@color/greyHeaderText"
+            android:textColor="@color/darkGreyText"
             android:textSize="22sp"
             android:text="@string/login_title"
             android:layout_gravity="center"
