--- a/app/src/main/res/layout/write_review_activity.xml
+++ b/app/src/main/res/layout/write_review_activity.xml
@@ -14,7 +14,7 @@
         <TextView
             android:textSize="22sp"
             android:text="@string/write_a_review_header"
-            android:textColor="@color/greyHeaderText"
+            android:textColor="@color/darkGreyText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
