post cover integrated

--- a/app/src/main/res/layout/add_post_activity_content.xml
+++ b/app/src/main/res/layout/add_post_activity_content.xml
@@ -248,13 +248,28 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
-            <ImageView
-                android:id="@+id/cover_image"
+            <FrameLayout
                 android:visibility="gone"
-                android:scaleType="centerCrop"
-                android:adjustViewBounds="true"
-                android:layout_width="100dp"
-                android:layout_height="60dp"/>
+                android:id="@+id/cover_image_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+                <ImageView
+                    android:id="@+id/cover_image"
+                    android:scaleType="centerCrop"
+                    android:adjustViewBounds="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"/>
+
+                <ImageButton
+                    android:layout_gravity="right|top"
+                    android:id="@+id/delete_image"
+                    android:background="@color/colorPrimary"
+                    android:src="@drawable/ic_close"
+                    android:layout_width="26dp"
+                    android:layout_height="26dp"/>
+            </FrameLayout>
+
 
         </LinearLayout>
     </LinearLayout>
