--- a/app/src/main/res/layout/add_post_activity_content.xml
+++ b/app/src/main/res/layout/add_post_activity_content.xml
@@ -272,5 +272,30 @@
 
 
         </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rounded_border"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/add_gallery_image"
+                android:text="@string/add_post_gallery_title"
+                android:drawableLeft="@drawable/ic_add"
+                android:gravity="center_vertical"
+                android:drawablePadding="4dp"
+                android:padding="10dp"
+                android:textColor="@color/darkGreyText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <GridView
+                android:id="@+id/photo_gallery_list"
+                android:numColumns="4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
     </LinearLayout>
 </ScrollView>
