--- a/app/src/main/res/layout/add_post_activity_content.xml
+++ b/app/src/main/res/layout/add_post_activity_content.xml
@@ -278,6 +278,7 @@
             android:layout_marginTop="20dp"
             android:background="@drawable/rounded_border"
             android:layout_width="match_parent"
+            android:paddingBottom="10dp"
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/add_gallery_image"
