--- a/app/src/main/res/layout/main_menu_activity.xml
+++ b/app/src/main/res/layout/main_menu_activity.xml
@@ -34,6 +34,7 @@
         android:layout_gravity="start">
 
         <LinearLayout
+            android:id="@+id/login_signup_layout"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_gravity="bottom"
