--- a/app/src/main/res/layout/post_page.xml
+++ b/app/src/main/res/layout/post_page.xml
@@ -108,6 +108,18 @@
                         android:textAllCaps="false"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
+
+                    <Button
+                        android:id="@+id/publish"
+                        android:visibility="gone"
+                        style="@style/contrastButton"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:text="@string/publish"
+                        android:layout_marginLeft="15dp"
+                        android:textAllCaps="false"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
                 </LinearLayout>
 
 
@@ -162,6 +174,121 @@
                 android:layout_height="wrap_content">
 
             </GridView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:padding="20dp"
+            android:paddingTop="15dp"
+            android:layout_margin="15dp"
+            android:id="@+id/operation_hours"
+            android:background="@drawable/rounded_border"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textSize="17sp"
+                android:paddingBottom="10dp"
+                android:textColor="@color/darkGreyText"
+                android:text="@string/available_on"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TableLayout
+                android:stretchColumns="*"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TableRow
+                    android:visibility="gone"
+                    android:paddingBottom="10dp"
+                    >
+                    <TextView
+                        android:textColor="@color/greyText"
+                        android:text="@string/saturday"
+                        />
+                    <TextView
+                        android:layout_gravity="right"
+                        android:textColor="@color/greyText"
+                        />
+                </TableRow>
+                <TableRow
+                    android:visibility="gone"
+                    android:paddingBottom="10dp"
+                    >
+                    <TextView
+                        android:textColor="@color/greyText"
+                        android:text="@string/sunday"
+                        />
+                    <TextView
+                        android:layout_gravity="right"
+                        android:textColor="@color/greyText"
+                        />
+                </TableRow
+                    >
+                <TableRow
+                    android:visibility="gone"
+                    android:paddingBottom="10dp"
+                    >
+                    <TextView
+                        android:textColor="@color/greyText"
+                        android:text="@string/monday"
+                        />
+                    <TextView
+                        android:layout_gravity="right"
+                        android:textColor="@color/greyText"
+                        />
+                </TableRow>
+                <TableRow
+                    android:visibility="gone"
+                    android:paddingBottom="10dp"
+                    >
+                    <TextView
+                        android:textColor="@color/greyText"
+                        android:text="@string/tuesday"
+                        />
+                    <TextView
+                        android:layout_gravity="right"
+                        android:textColor="@color/greyText"
+                        />
+                </TableRow>
+                <TableRow
+                    android:visibility="gone"
+                    android:paddingBottom="10dp"
+                    >
+                    <TextView
+                        android:textColor="@color/greyText"
+                        android:text="@string/wednesday"
+                        />
+                    <TextView
+                        android:layout_gravity="right"
+                        android:textColor="@color/greyText"
+                        />
+                </TableRow>
+                <TableRow
+                    android:visibility="gone"
+                    android:paddingBottom="10dp"
+                    >
+                    <TextView
+                        android:textColor="@color/greyText"
+                        android:text="@string/thursday"
+                        />
+                    <TextView
+                        android:layout_gravity="right"
+                        android:textColor="@color/greyText"
+                        />
+                </TableRow>
+                <TableRow
+                    android:visibility="gone"
+                    >
+                    <TextView
+                        android:textColor="@color/greyText"
+                        android:text="@string/friday"
+                        />
+                    <TextView
+                        android:layout_gravity="right"
+                        android:textColor="@color/greyText"
+                        />
+                </TableRow>
+            </TableLayout>
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
