--- a/app/src/main/res/layout/no_connection_layout.xml
+++ b/app/src/main/res/layout/no_connection_layout.xml
@@ -8,6 +8,7 @@
               android:layout_height="wrap_content"
               android:layout_gravity="center">
     <TextView android:text="@string/no_internet_connection"
+              android:id="@+id/no_connection_text"
               android:layout_width="wrap_content"
               android:textColor="#ffb2b2b2"
               android:textSize="18sp"
