Basic facebook login implemented

--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -14,9 +14,9 @@
         android:layout_height="wrap_content"/>
 
     <LinearLayout android:orientation="vertical"
-                  android:layout_gravity="bottom"
+                  android:layout_gravity="center"
                   android:padding="20dp"
-                  android:layout_marginBottom="80dp"
+                  android:layout_marginTop="30dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
 
@@ -52,5 +52,31 @@
             android:layout_width="match_parent"
             android:layout_height="46dp"
             style="@style/contrastButton"/>
+
+        <FrameLayout
+            android:id="@+id/facebook_login"
+            android:layout_gravity="bottom"
+            android:background="@drawable/facebook_login_button"
+            android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
+            android:paddingLeft="5dp"
+            android:layout_height="46dp">
+            <ImageView
+                android:layout_gravity="left|center_vertical"
+                android:background="@drawable/ic_facebook"
+                android:layout_width="16dp"
+                android:layout_marginLeft="5dp"
+                android:layout_height="16dp"/>
+
+            <TextView
+                android:text="@string/login_with_facebook"
+                android:textColor="@color/white"
+                android:paddingLeft="10dp"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </FrameLayout>
     </LinearLayout>
 </FrameLayout>
