--- a/app/src/main/res/layout/write_review_star.xml
+++ b/app/src/main/res/layout/write_review_star.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
            android:src="@drawable/ic_star_empty"
-           android:padding="2dp"
+           android:paddingLeft="2dp"
+           android:paddingRight="2dp"
            android:layout_width="24dp"
-           android:layout_height="40dp"/>
+           android:layout_height="30dp"/>
